--- a/Chat Bot/Base.lproj/Main.storyboard
+++ b/Chat Bot/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,122 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Chat_Bot" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="HIV-HX-bHc">
+                                <rect key="frame" x="8" y="52" width="398" height="764"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="AnswerCell" rowHeight="66" id="SbZ-Sd-2Uh">
+                                        <rect key="frame" x="0.0" y="28" width="398" height="66"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="SbZ-Sd-2Uh" id="PGN-t1-U4K">
+                                            <rect key="frame" x="0.0" y="0.0" width="398" height="65.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date and Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="unf-it-NqV">
+                                                    <rect key="frame" x="20" y="11" width="358" height="23.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="252" text="Answer" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hqz-Mq-c9C">
+                                                    <rect key="frame" x="20" y="34.5" width="57" height="20.5"/>
+                                                    <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ksc-HX-TSs">
+                                                    <rect key="frame" x="77" y="34.5" width="301" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailingMargin" secondItem="Ksc-HX-TSs" secondAttribute="trailing" id="A5O-HF-Jos"/>
+                                                <constraint firstItem="unf-it-NqV" firstAttribute="leading" secondItem="PGN-t1-U4K" secondAttribute="leadingMargin" id="AJT-jB-eg9"/>
+                                                <constraint firstItem="hqz-Mq-c9C" firstAttribute="bottom" secondItem="PGN-t1-U4K" secondAttribute="bottomMargin" id="TI3-id-25m"/>
+                                                <constraint firstItem="Ksc-HX-TSs" firstAttribute="bottom" secondItem="PGN-t1-U4K" secondAttribute="bottomMargin" id="glj-Zr-Kwr"/>
+                                                <constraint firstItem="Ksc-HX-TSs" firstAttribute="top" secondItem="unf-it-NqV" secondAttribute="bottom" id="oUG-Qr-oMk"/>
+                                                <constraint firstItem="hqz-Mq-c9C" firstAttribute="leading" secondItem="PGN-t1-U4K" secondAttribute="leadingMargin" id="oxA-VX-xpJ"/>
+                                                <constraint firstItem="Ksc-HX-TSs" firstAttribute="leading" secondItem="hqz-Mq-c9C" secondAttribute="trailing" id="s57-0c-rZd"/>
+                                                <constraint firstItem="unf-it-NqV" firstAttribute="top" secondItem="PGN-t1-U4K" secondAttribute="topMargin" id="sST-k4-za9"/>
+                                                <constraint firstItem="unf-it-NqV" firstAttribute="trailing" secondItem="PGN-t1-U4K" secondAttribute="trailingMargin" id="wFs-IL-0jR"/>
+                                                <constraint firstItem="hqz-Mq-c9C" firstAttribute="top" secondItem="unf-it-NqV" secondAttribute="bottom" id="wod-yF-2hs"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="QuestionCell" rowHeight="66" id="SVA-v5-yNa">
+                                        <rect key="frame" x="0.0" y="94" width="398" height="66"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="SVA-v5-yNa" id="tjh-P7-VoU">
+                                            <rect key="frame" x="0.0" y="0.0" width="398" height="65.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date and Time" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TXg-oy-15h">
+                                                    <rect key="frame" x="20" y="11" width="358" height="23.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gEq-BM-qxk">
+                                                    <rect key="frame" x="20" y="34.5" width="289" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Question" textAlignment="right" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mos-R7-B6a">
+                                                    <rect key="frame" x="309" y="34.5" width="69" height="20.5"/>
+                                                    <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="gEq-BM-qxk" firstAttribute="leading" secondItem="tjh-P7-VoU" secondAttribute="leadingMargin" id="0yv-9U-prA"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="Mos-R7-B6a" secondAttribute="trailing" id="4MH-u3-Q35"/>
+                                                <constraint firstItem="Mos-R7-B6a" firstAttribute="top" secondItem="TXg-oy-15h" secondAttribute="bottom" id="Dxn-QA-bQn"/>
+                                                <constraint firstItem="gEq-BM-qxk" firstAttribute="top" secondItem="TXg-oy-15h" secondAttribute="bottom" id="IHb-58-wJO"/>
+                                                <constraint firstItem="TXg-oy-15h" firstAttribute="trailing" secondItem="tjh-P7-VoU" secondAttribute="trailingMargin" id="LK2-U1-3v5"/>
+                                                <constraint firstItem="Mos-R7-B6a" firstAttribute="bottom" secondItem="tjh-P7-VoU" secondAttribute="bottomMargin" id="PKq-yl-pfI"/>
+                                                <constraint firstItem="Mos-R7-B6a" firstAttribute="leading" secondItem="gEq-BM-qxk" secondAttribute="trailing" id="aDE-RF-7Nh"/>
+                                                <constraint firstItem="TXg-oy-15h" firstAttribute="top" secondItem="tjh-P7-VoU" secondAttribute="topMargin" id="ggu-cz-oKr"/>
+                                                <constraint firstItem="gEq-BM-qxk" firstAttribute="bottom" secondItem="tjh-P7-VoU" secondAttribute="bottomMargin" id="omS-t8-UAj"/>
+                                                <constraint firstItem="TXg-oy-15h" firstAttribute="leading" secondItem="tjh-P7-VoU" secondAttribute="leadingMargin" id="qMn-ey-2eY"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BD3-O0-GZm">
+                                <rect key="frame" x="8" y="824" width="398" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="BD3-O0-GZm" firstAttribute="top" secondItem="HIV-HX-bHc" secondAttribute="bottom" constant="8" id="Hws-Nh-vDE"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="BD3-O0-GZm" secondAttribute="bottom" constant="8" id="Oqh-I0-BEb"/>
+                            <constraint firstItem="HIV-HX-bHc" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="8" id="XNM-BH-uSM"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="BD3-O0-GZm" secondAttribute="trailing" constant="8" id="aeC-js-CW3"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="HIV-HX-bHc" secondAttribute="trailing" constant="8" id="bj3-8N-7KM"/>
+                            <constraint firstItem="BD3-O0-GZm" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="8" id="qey-ar-fSg"/>
+                            <constraint firstItem="HIV-HX-bHc" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="8" id="twg-AU-qH6"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="137.68115942028987" y="126.5625"/>
         </scene>
     </scenes>
 </document>
